--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -30,7 +30,8 @@ Date:
            / 100
          </div>
        </div>
-       <button @click="addHomework()">Add homework</button>
+       <button @click="addHomework()"onclick="console.log('Button clicked')">Add homework</button>
+       >Add homework</button>
  
        <!-- Program Set Grade -->
        <div>
