--- a/doet/index.html
+++ b/doet/index.html
@@ -1,85 +1,85 @@
-<!--CMPS3141-HCI - AS1-24S1
-Collaborators:Daryn Forman
-Date:8/19/2024
- -->
+<!-- CMPS3141-HCI - AS1-24S1
+Collaborators: Daryn Forman
+Date: 8/19/2024
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Exercise 1 : Usability problems in everyday objects </title>
+    <meta charset="UTF-8">
+    <title>Exercise 1: Usability Problems in Everyday Objects</title>
 </head>
 <body>
-	
 
+    <!-- Introduction Section -->
+    <h1>Usability Problems in Everyday Objects</h1>
+    <p>This document examines common usability issues in everyday objects, offering insights and recommendations for improvement.</p>
 
- <h1>Usability Problems in Everyday Objects</h1>
- <img src="Dial.jpg" alt="Dial Image washer " width="200" height="200">
-    <div class="problem">
-		
-
+    <!-- Problem 1: Washing Machine Control Panel -->
+    <section id="washing-machine">
         <h2>Problem 1: Washing Machine Control Panel</h2>
-        <p><strong> What is wrong with it? </strong><br>
-        The control panel on the washing machine dial shown above has hard-to-read buttons.The symbols are not immediately clear to the person wanting to use the washer.The pictures on the dial would require the user to have some type of knowledge before using the machine hence it is not good for a first time user.Additionally, the layout is cluttered with too many options, some of which are rarely used.</p>
-
-        <p><strong>Usability Issues:</strong><br>
+        <img src="Dial.jpg" alt="Washing Machine Control Panel" width="200" height="200">
+        <p><strong>What is wrong with it?</strong><br>
+        The control panel on the washing machine dial shown above has hard-to-read buttons. The symbols are not immediately clear to the person wanting to use the washer. The pictures on the dial would require the user to have some type of knowledge before using the machine hence it is not good for a first-time user. Additionally, the layout is cluttered with too many options, some of which are rarely used.</p>
+        <p><strong>Usability Issues:</strong></p>
         <ul>
-            <li><strong>Learnability:</strong> It is challenging for new users to understand how to operate the washing machine and they will constantly have to read the manual. </li>
-            <li><strong>Efficiency:</strong> It  will take longer to do laundry , especially when setting a timer or adjusting the load and water content in the machine , due to the small, cramped buttons.</li>
-            <li><strong>Safety:</strong>  Because it is so hard to read , this could lead to the user inputing  incorrect settings, such as washing with warm water instead of cold which will cause the colors in colored clothes to run </li>
+            <li><strong>Learnability:</strong> It is challenging for new users to understand how to operate the washing machine and they will constantly have to read the manual.</li>
+            <li><strong>Efficiency:</strong> It will take longer to do laundry, especially when setting a timer or adjusting the load and water content in the machine, due to the small, cramped buttons.</li>
+            <li><strong>Safety:</strong> Because it is so hard to read, this could lead to the user inputting incorrect settings, such as washing with warm water instead of cold which will cause the colors in colored clothes to run.</li>
         </ul>
-        </p>
+        <p><strong>Suggested Fix:</strong></p>
+        <ul>
+            <li><strong>Add Text Labels:</strong> Add small text labels beside the pictures to clearly state what each symbol represents.</li>
+            <li><strong>Use Color Coding:</strong> This will make it easier for the user to quickly find the right cycle.</li>
+            <li><strong>Increase Icon Size:</strong> Larger icons are easier to see and understand, hence reducing the user's chances of making mistakes.</li>
+        </ul>
+    </section>
 
-        <p><strong>Suggested Fix:</strong><br>
-       A recomendation for improving the design of this washing machine dial is to 
-       <li><strong>Add Text labels :</strong> add small text labels besides the pictures to clearly state what each symbol represents </li>
-       <li><strong>Use Color Coding :</strong> this will make it easier for the user to quickly find the right cycle </li>
-       <li><strong>Increase icon size :</strong> Larger icons are easier to see and understand hence reducing the users chances of making mistakes </p>
-    </div>
-
-    <div class="problem">
-    
+    <!-- Problem 2: Inserting Batteries -->
+    <section id="inserting-batteries">
         <h2>Problem 2: Inserting Batteries</h2>
-        <img src="B1.jpeg" alt="Dial Image washer " width="200" height="200"> <img src="b2.jpeg" alt="Dial Image washer " width="200" height="200">
+        <img src="B1.jpeg" alt="Inserting Batteries 1" width="200" height="200">
+        <img src="b2.jpeg" alt="Inserting Batteries 2" width="200" height="200">
         <p><strong>Description:</strong><br>
-        when it comes to batteries,they usualy give me some trouble.They can be hard to figure out which way to insert the batteries or which size to use if its not clearly marked on the object or appliance.They are aslo a bit hard to take out and sometimes i find myself clawing into them with my fingers to remove or hitting on the appliance to remove them.I also dont know when they are about to die </p>
-
-        <p><strong>Usability Issues:</strong><br>
+        When it comes to batteries, they usually give me some trouble. They can be hard to figure out which way to insert the batteries or which size to use if it's not clearly marked on the object or appliance. They are also a bit hard to take out and sometimes I find myself clawing into them with my fingers to remove them or hitting the appliance to remove them. I also don't know when they are about to die.</p>
+        <p><strong>Usability Issues:</strong></p>
         <ul>
-            <li><strong>Learnability:</strong> It’s hard for users  to correctly insert or use a battery especially if the positive and negative signs arent marked on them.</li>
-            <li><strong>Efficiency:</strong> because we do not know when the battery will run out this can lead to interuptions constantly with our devices and appliances.It can also be time consuming if the batteries are hard to take out.</li>
-            <li><strong>Safety:</strong> the batteries can leak,overheat or explode if misused.</li>
-        </p>
-
-        <p><strong>Suggested Fix:</strong><br>
-            <li><strong>Battery life indicators :</strong> place a simple battery life indicator such as an led light </li>
-            <li><strong>textured surface </strong> Design batteries with a textured surface to provide better grip during removal.</li>
-            <li><strong>Color coded polarity markings :</strong> the pusitive and negative sides of the batter can be color coded so its easier for the use to know which side is which. </p></p>
-    </div>
-
-    <div class="problem">
-        <h2>Problem 3: Elevator Buttons </h2>
-        <img src= "elevator.jpeg" alt="Dial Image washer " width="200" height="200">
-
-        <p><strong>What is wrong with it? :</strong><br>
-        The problem with the elevator buttons shown above is that it is not properly labeled ,hard to use and the buttons are clustered together.</p>
-
-        <p><strong>Usability Issues:</strong><br>
-        <ul>
-            <li><strong>Learnability:</strong>The buttons are not not clearly labeled with their floors and so it makes it harder for the user to quickly press their floor button .</li>
-            <li><strong>Efficiency:</strong> because the layout is clustered it can cause delays as the user try to find the correct button</li>
-            <li><strong>Safety:</strong> The help button is placed at the bottom which might not be accessible in an emergency.</li>
+            <li><strong>Learnability:</strong> It’s hard for users to correctly insert or use a battery, especially if the positive and negative signs aren't marked on them.</li>
+            <li><strong>Efficiency:</strong> Because we do not know when the battery will run out, this can lead to interruptions constantly with our devices and appliances. It can also be time-consuming if the batteries are hard to take out.</li>
+            <li><strong>Safety:</strong> The batteries can leak, overheat, or explode if misused.</li>
         </ul>
-        </p>
+        <p><strong>Suggested Fix:</strong></p>
+        <ul>
+            <li><strong>Battery Life Indicators:</strong> Place a simple battery life indicator such as an LED light.</li>
+            <li><strong>Textured Surface:</strong> Design batteries with a textured surface to provide better grip during removal.</li>
+            <li><strong>Color-Coded Polarity Markings:</strong> The positive and negative sides of the battery can be color-coded so it's easier for the user to know which side is which.</li>
+        </ul>
+    </section>
 
-        <p><strong>Suggested Fix:</strong><br> Organize the buttons in a logical sequence and ensure clear labeling.
-            <li><strong>Layout :</strong> place a simple battery life indicator such as an led light </li>
-            <li><strong>Reposion the hep button :</strong>place the Help button higher up the panel, ideally at a height that is easily accessible for all users  </li>
-            <li><strong>Group related buttons together </strong> e.g. all floor buttons in one area, function buttons like door open/close and help in another.</li> </p>
-    </div>
+    <!-- Problem 3: Elevator Buttons -->
+    <section id="elevator-buttons">
+        <h2>Problem 3: Elevator Buttons</h2>
+        <img src="elevator.jpeg" alt="Elevator Buttons" width="200" height="200">
+        <p><strong>What is wrong with it?</strong><br>
+        The problem with the elevator buttons shown above is that it is not properly labeled, hard to use, and the buttons are clustered together.</p>
+        <p><strong>Usability Issues:</strong></p>
+        <ul>
+            <li><strong>Learnability:</strong> The buttons are not clearly labeled with their floors and so it makes it harder for the user to quickly press their floor button.</li>
+            <li><strong>Efficiency:</strong> Because the layout is clustered, it can cause delays as the user tries to find the correct button.</li>
+            <li><strong>Safety:</strong> The help button is placed at the bottom, which might not be accessible in an emergency.</li>
+        </ul>
+        <p><strong>Suggested Fix:</strong></p>
+        <ul>
+            <li><strong>Layout:</strong> Organize the buttons in a logical sequence and ensure clear labeling.</li>
+            <li><strong>Reposition the Help Button:</strong> Place the Help button higher up the panel, ideally at a height that is easily accessible for all users.</li>
+            <li><strong>Group Related Buttons Together:</strong> Group all floor buttons in one area, function buttons like door open/close and help in another.</li>
+        </ul>
+    </section>
 
-    <h2>Conclusion</h2>
-    <p>In analyzing these everyday objects, it’s clear that usability is often compromised in favor of aesthetics or cost-saving measures. By focusing on the LES dimensions—Learnability, Efficiency, and Safety—designers can create more user-friendly products that are both functional and intuitive.</p>
-
+    <!-- Conclusion -->
+    <section id="conclusion">
+        <h2>Conclusion</h2>
+        <p>In analyzing these everyday objects, it’s clear that usability is often compromised in favor of aesthetics or cost-saving measures. By focusing on the LES dimensions—Learnability, Efficiency, and Safety—designers can create more user-friendly products that are both functional and intuitive.</p>
+    </section>
 
 </body>
 </html>
