--- a/homepage/index.html
+++ b/homepage/index.html
@@ -14,11 +14,14 @@ Date:
     <header>
         <h1>Welcome to Daryn's Personal Website</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+          <table>
+            <tr>
+              <td><a href="index.html">Home</a></td>
+              <td><a href="cv.html">CV</a></td>
+              <td><a href="contact.html">Contact</a></td>
+            </tr>
+          </table>
+          
         </nav>
     </header>
 
