--- a/homepage/index.html
+++ b/homepage/index.html
@@ -10,7 +10,7 @@ Date:
 </head>
 <body>
 
-    <!-- Header Section -->
+    <!-- Header Section. -->
     <header>
         <h1>Welcome to Daryn's Personal Website</h1>
         <nav>
