--- a/expenses/index.html
+++ b/expenses/index.html
@@ -9,6 +9,15 @@ Date:
 	<title>Edit this to set page title - Exercise 2</title>
 </head>
 <body>
+<h1>What is the most important usability dimension for this app? </h1>
+<p>The most important  usability dimension for this app would be how fast and easy it is to use the app, in other words efficiency.Since they both need to track and split their expenses quickly it is important that the app has a user friendly interface.by creating this type of iterface it will it will help them manage their money better.</p>
+ <h1>What usability problems can you detect with this method? </h1>
+<p>usability problems that can be detected with this method would be:</p>
+ <ul><li>It is very complex.This affects efficiency and learnability</li>
+     <li>Easy to make mistakes.This affects safety of the data as errors can go unoticed easily </li>
+     <li>Hard to manage as it grows.This affects efficiency because as the spreadsheet transactions increasses it can become complicated to manage . </li>
+ </ul>
+
 	<header>
         <h1>Couple Expenses Tracker</h1>
         <p>Keep track of shared and personal expenses between Neo and Trinity.</p>
