--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minimalist Grading Calculator</title>
+    <script src="index.js" type="module"></script>
   </head>
   <body>
     <div id="grade_calc">
@@ -97,53 +98,7 @@
       </div>
     </div>
 
-    <script type="module">
-      import { createApp } from "https://mavue.mavo.io/mavue.js";
-
-      let app = createApp(
-        {
-          data: {
-            assessments: {
-              project: null,
-              prgmSet: null,
-              Tests: [null, null],
-              FExam: null,
-              homeworks: [null],
-            },
-          },
-
-          computed: {
-            calculatedGrade() {
-              let p = this.assessments;
-              return (
-                0.25 * p.project + 0.05 * p.prgmSet + 0.25 * this.homeworkAverage
-              );
-            },
-
-            homeworkAverage() {
-              let done = 0;
-              let sum = 0;
-
-              for (let hw of this.assessments.homeworks) {
-                if (hw >= 0) {
-                  sum += hw;
-                  done++;
-                }
-              }
-
-              return sum / done;
-            },
-          },
-
-          methods: {
-            addHomework() {
-              this.assessments.homeworks.push(null);
-            },
-          },
-        },
-        "#grade_calc"
-      );
-    </script>
+    
   </body>
 </html>
 
