--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -35,7 +35,7 @@
       </table>
 
       <!-- Section for Homeworks -->
-      <div>Homeworks</div>
+      <div style="text-align: center;">Homeworks</div>
       <table>
         <thead>
           <tr>
@@ -55,7 +55,7 @@
       <button @click="addHomework">Add Homework</button>
 
       <!-- Section for Project -->
-      <div>Project</div>
+      <div style="text-align: center;">Project </div>
       <table>
         <thead>
           <tr>
@@ -74,7 +74,7 @@
       </table>
 
       <!-- Section for Final Exam -->
-      <div>Final Exam</div>
+      <div style="text-align: center;">Final Exam</div>
       <table>
         <thead>
           <tr>
