--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -11,7 +11,7 @@
       <h1>Calculate Overall Grade</h1>
 
       <!-- Section for Tests -->
-      
+      <div >Tests</div>
       <table>
         <thead>
           <tr>
@@ -35,7 +35,7 @@
       </table>
 
       <!-- Section for Homeworks -->
-      <div style="text-align: center;">Homeworks</div>
+      <div >Homeworks</div>
       <table>
         <thead>
           <tr>
@@ -55,7 +55,7 @@
       <button @click="addHomework">Add Homework</button>
 
       <!-- Section for Project -->
-      <div style="text-align: center;">Project </div>
+      <div >Project </div>
       <table>
         <thead>
           <tr>
@@ -74,7 +74,7 @@
       </table>
 
       <!-- Section for Final Exam -->
-      <div style="text-align: center;">Final Exam</div>
+      <div style=>Final Exam</div>
       <table>
         <thead>
           <tr>
