--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -11,8 +11,8 @@
       <h1>Calculate Overall Grade</h1>
 
       <!-- Section for Tests -->
-      <div >Tests</div>
-      <table>
+      <h2>Tests</h2>
+      <table border="1">
         <thead>
           <tr>
             <th>Test</th>
@@ -35,8 +35,8 @@
       </table>
 
       <!-- Section for Homeworks -->
-      <div >Homeworks</div>
-      <table>
+      <h2>Homeworks</h2>
+      <table border="1">
         <thead>
           <tr>
             <th>Homework</th>
@@ -55,8 +55,8 @@
       <button @click="addHomework">Add Homework</button>
 
       <!-- Section for Project -->
-      <div >Project </div>
-      <table>
+      <h2>Project</h2>
+      <table border="1">
         <thead>
           <tr>
             <th>Project</th>
@@ -74,8 +74,8 @@
       </table>
 
       <!-- Section for Final Exam -->
-      <div style=>Final Exam</div>
-      <table>
+      <h2>Final Exam</h2>
+      <table border="1">
         <thead>
           <tr>
             <th>Final Exam</th>
@@ -97,9 +97,8 @@
         Projected class grade: {{ calculatedGrade }}
       </div>
     </div>
-
-    
   </body>
 </html>
+
 
 
